--- a/templates/cours/lister.html.twig
+++ b/templates/cours/lister.html.twig
@@ -1,39 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-    <div class="container">
-        <aside class="sidebar">
-            <div class="brand">
-                <img src="../image/ertret.png" alt="ProDeal" class="logo">
-            </div>
-            <nav class="menu">
-                <ul>
-                    <li><a href="#" class="active">Accueil</a></li>
-                    <li><a href="http://localhost/24lilian31/public/instrument/lister">Instrument</a></li>
-                    <li><a href="http://localhost/24lilian31/public/professeur/lister">Professeur</a></li>
-                    <li><a href="http://localhost/24lilian31/public/cours/lister">Cours</a></li>
-                    <li><a href="http://localhost/24lilian31/public/eleve/lister">Eleve</a></li>
-                    <li><a href="http://localhost/24lilian31/public/intervention/lister">Intervention</a></li>
-                </ul>
-            </nav>
-            <div class="organization">
-                <ul>
-                    <li><a href="#">Déconnexion</a></li>
-                </ul>
-            </div>
-        </aside>
+{% extends 'base.html.twig' %}
+{% block content %}
+
 
         <main class="main">
             <header class="main-header">
                 <h1>Cours</h1>
-                <div class="search">
-                    <input type="text" placeholder="Search here..." />
-                </div>
             </header>
             <table class="document-table">
                 <thead>
@@ -127,3 +98,4 @@
     </script>
 </body>
 </html>
+{% endblock %}
