--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,7 @@
 
 {% block title %}Register{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Register</h1>
 
     {# Affiche les erreurs du formulaire principal #}
